syntax = "proto3";
package grpcExam;
option go_package = "proto/proto";

service IncrementService {
    rpc Increment (IncrementRequest) returns (IncrementResponse) {}
}

message IncrementRequest {
    int32 value = 1;
}

message IncrementResponse {
    int32 value = 1;
}

//protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative proto/proto.proto
